@@ -16,6 +16,11 @@
 
 package stroom.search.elastic.search;
 
+import stroom.docref.DocRef;
+import stroom.langchain.api.OpenAIModelStore;
+import stroom.langchain.api.OpenAIService;
+import stroom.openai.shared.OpenAIModelDoc;
+import stroom.query.api.datasource.FieldType;
 import stroom.query.common.v2.Coprocessors;
 import stroom.query.common.v2.ResultStore;
 import stroom.query.language.functions.FieldIndex;
@@ -32,6 +37,7 @@ import stroom.search.elastic.ElasticClusterStore;
 import stroom.search.elastic.shared.ElasticClusterDoc;
 import stroom.search.elastic.shared.ElasticConnectionConfig;
 import stroom.search.elastic.shared.ElasticIndexDoc;
+import stroom.search.elastic.shared.ElasticIndexField;
 import stroom.task.api.ExecutorProvider;
 import stroom.task.api.TaskContext;
 import stroom.task.api.TaskContextFactory;
@@ -47,7 +53,6 @@ import co.elastic.clients.elasticsearch.ElasticsearchClient;
 import co.elastic.clients.elasticsearch._types.SlicedScroll;
 import co.elastic.clients.elasticsearch._types.Time;
 import co.elastic.clients.elasticsearch._types.query_dsl.FieldAndFormat;
-import co.elastic.clients.elasticsearch._types.query_dsl.Query;
 import co.elastic.clients.elasticsearch.core.ScrollResponse;
 import co.elastic.clients.elasticsearch.core.SearchRequest;
 import co.elastic.clients.elasticsearch.core.SearchResponse;
@@ -56,6 +61,12 @@ import co.elastic.clients.elasticsearch.core.search.Hit;
 import co.elastic.clients.elasticsearch.core.search.SourceConfig;
 import co.elastic.clients.json.JsonData;
 import com.fasterxml.jackson.databind.node.ObjectNode;
+import dev.langchain4j.data.segment.TextSegment;
+import dev.langchain4j.model.scoring.ScoringModel;
+import dev.langchain4j.rag.content.Content;
+import dev.langchain4j.rag.content.ContentMetadata;
+import dev.langchain4j.rag.content.aggregator.ReRankingContentAggregator;
+import dev.langchain4j.rag.query.Query;
 import jakarta.inject.Inject;
 import jakarta.inject.Provider;
 import jakarta.json.JsonArray;
@@ -66,6 +77,8 @@ import jakarta.json.JsonValue;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collection;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -73,36 +86,46 @@ import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.Executor;
 import java.util.concurrent.atomic.AtomicLong;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
 public class ElasticSearchTaskHandler {
 
     private static final LambdaLogger LOGGER = LambdaLoggerFactory.getLogger(ElasticSearchTaskHandler.class);
+    private static final String RERANK_SCORE_FIELD_NAME = "Rerank Score";
+    private static final Pattern RERANK_VECTOR_FIELD_NAME_PATTERN = Pattern.compile("^(.+)\\.[^.]+$");
     public static final ThreadPool SCROLL_REQUEST_THREAD_POOL =
             new ThreadPoolImpl("Elasticsearch Scroll Request");
 
     private final Provider<ElasticSearchConfig> elasticSearchConfigProvider;
+    private final Provider<OpenAIService> openAIServiceProvider;
     private final ElasticClientCache elasticClientCache;
     private final ElasticClusterStore elasticClusterStore;
+    private final OpenAIModelStore openAIModelStore;
     private final ExecutorProvider executorProvider;
     private final TaskContextFactory taskContextFactory;
 
     @Inject
     ElasticSearchTaskHandler(final Provider<ElasticSearchConfig> elasticSearchConfigProvider,
+                             final Provider<OpenAIService> openAIServiceProvider,
                              final ElasticClientCache elasticClientCache,
                              final ElasticClusterStore elasticClusterStore,
+                             final OpenAIModelStore openAIModelStore,
                              final ExecutorProvider executorProvider,
                              final TaskContextFactory taskContextFactory) {
         this.elasticSearchConfigProvider = elasticSearchConfigProvider;
+        this.openAIServiceProvider = openAIServiceProvider;
         this.elasticClientCache = elasticClientCache;
         this.elasticClusterStore = elasticClusterStore;
+        this.openAIModelStore = openAIModelStore;
         this.executorProvider = executorProvider;
         this.taskContextFactory = taskContextFactory;
     }
 
     public void search(final TaskContext taskContext,
                        final ElasticIndexDoc elasticIndex,
-                       final Query queryBuilder,
+                       final ElasticQueryParams queryBuilder,
                        final Highlight highlightBuilder,
                        final Coprocessors coprocessors,
                        final ResultStore resultStore,
@@ -114,11 +137,17 @@ public class ElasticSearchTaskHandler {
             taskContext.info(() -> LogUtil.message("Searching Elasticsearch index {}", elasticIndex.getName()));
 
             final ElasticClusterDoc elasticCluster = elasticClusterStore.readDocument(elasticIndex.getClusterRef());
+            final DocRef rerankModelRef = elasticIndex.getRerankModelRef();
+            final OpenAIModelDoc rerankModel = rerankModelRef != null
+                    ?
+                    openAIModelStore.readDocument(rerankModelRef)
+                    : null;
             final ElasticConnectionConfig connectionConfig = elasticCluster.getConnection();
 
             final CompletableFuture<Void> searchFuture = executeSearch(
                     taskContext,
                     elasticIndex,
+                    rerankModel,
                     queryBuilder,
                     highlightBuilder,
                     coprocessors,
@@ -142,7 +171,8 @@ public class ElasticSearchTaskHandler {
 
     private CompletableFuture<Void> executeSearch(final TaskContext parentContext,
                                                   final ElasticIndexDoc elasticIndex,
-                                                  final Query queryBuilder,
+                                                  final OpenAIModelDoc rerankModel,
+                                                  final ElasticQueryParams queryParams,
                                                   final Highlight highlightBuilder,
                                                   final Coprocessors coprocessors,
                                                   final ResultStore resultStore,
@@ -164,7 +194,8 @@ public class ElasticSearchTaskHandler {
                             TerminateHandlerFactory.NOOP_FACTORY,
                             taskContext -> searchSlice(
                                     elasticIndex,
-                                    queryBuilder,
+                                    rerankModel,
+                                    queryParams,
                                     highlightBuilder,
                                     coprocessors,
                                     resultStore,
@@ -189,7 +220,8 @@ public class ElasticSearchTaskHandler {
     }
 
     private void searchSlice(final ElasticIndexDoc elasticIndex,
-                             final Query queryBuilder,
+                             final OpenAIModelDoc rerankModel,
+                             final ElasticQueryParams queryParams,
                              final Highlight highlightBuilder,
                              final Coprocessors coprocessors,
                              final ResultStore resultStore,
@@ -204,7 +236,7 @@ public class ElasticSearchTaskHandler {
             final Time scrollTime = Time.of(t -> t.time(String.format("%ds", scrollSeconds)));
             final SearchRequest.Builder searchRequestBuilder = new SearchRequest.Builder()
                     .index(elasticIndex.getIndexName())
-                    .query(queryBuilder)
+                    .query(queryParams.getQuery())
                     .size(elasticIndex.getSearchScrollSize())
                     .scroll(scrollTime)
                     .source(SourceConfig.of(sc -> sc
@@ -231,6 +263,11 @@ public class ElasticSearchTaskHandler {
                 ));
             }
 
+            // Insert a field representing the rerank score, if enabled
+            if (rerankModel != null) {
+                fieldIndex.create(RERANK_SCORE_FIELD_NAME);
+            }
+
             final SearchResponse<ObjectNode> searchResponse = elasticClient.search(searchRequestBuilder.build(),
                     ObjectNode.class);
             final String scrollId = searchResponse.scrollId();
@@ -242,7 +279,8 @@ public class ElasticSearchTaskHandler {
             // Continue requesting results until we have all results
             while (!taskContext.isTerminated() && !searchHits.isEmpty()) {
                 totalHitCount += searchHits.size();
-                processResultBatch(fieldIndex, resultStore, valuesConsumer, errorConsumer, hitCount, searchHits);
+                processResultBatch(fieldIndex, elasticIndex, queryParams, rerankModel, resultStore, valuesConsumer,
+                        errorConsumer, hitCount, searchHits);
 
                 final long totalHits = totalHitCount;
                 taskContext.info(() -> LogUtil.message("Processed {} hits", totalHits));
@@ -276,13 +314,27 @@ public class ElasticSearchTaskHandler {
      * Receive a batch of search hits and send each one to the values consumer
      */
     private void processResultBatch(final FieldIndex fieldIndex,
+                                    final ElasticIndexDoc elasticIndex,
+                                    final ElasticQueryParams queryParams,
+                                    final OpenAIModelDoc rerankModel,
                                     final ResultStore resultStore,
                                     final ValuesConsumer valuesConsumer,
                                     final ErrorConsumer errorConsumer,
                                     final AtomicLong hitCount,
                                     final List<Hit<ObjectNode>> searchHits) {
         try {
+            final Map<String, Content> rankedContentMap = new HashMap<>();
+            final boolean performRerank = rerankModel != null && !queryParams.getKnnFieldQueries().isEmpty();
+            if (performRerank) {
+                rerankSearchHits(elasticIndex, queryParams, rerankModel, searchHits, rankedContentMap);
+            }
+
             for (final Hit<ObjectNode> searchHit : searchHits) {
+                if (performRerank && !rankedContentMap.containsKey(searchHit.id())) {
+                    // Search hit excluded due to rerank minimum score cutoff
+                    continue;
+                }
+
                 hitCount.incrementAndGet();
 
                 // Add highlights
@@ -297,7 +349,15 @@ public class ElasticSearchTaskHandler {
 
                 for (final String fieldName : fieldIndex.getFields()) {
                     final Integer insertAt = fieldIndex.getPos(fieldName);
-                    final Object fieldValue = getFieldValue(mapSearchHit, fieldName);
+
+                    final Object fieldValue;
+                    if (performRerank && rankedContentMap.containsKey(searchHit.id()) &&
+                        RERANK_SCORE_FIELD_NAME.equals(fieldName)) {
+                        fieldValue = rankedContentMap.get(searchHit.id()).metadata().get(
+                                ContentMetadata.RERANKED_SCORE);
+                    } else {
+                        fieldValue = getFieldValue(mapSearchHit, fieldName);
+                    }
 
                     if (fieldValue != null) {
                         if (values == null) {
@@ -337,6 +397,85 @@ public class ElasticSearchTaskHandler {
         }
     }
 
+    private void rerankSearchHits(final ElasticIndexDoc elasticIndex,
+                                  final ElasticQueryParams queryParams,
+                                  final OpenAIModelDoc rerankModel,
+                                  final List<Hit<ObjectNode>> searchHits,
+                                  final Map<String, Content> rankedContentMap) {
+        final Map<String, String> denseVectorToTextFieldMapping = new HashMap<>();
+        for (final ElasticIndexField field : elasticIndex.getFields()) {
+            if (FieldType.DENSE_VECTOR.equals(field.getFldType())) {
+                final String fieldName = field.getFldName();
+                final Matcher fieldNameMatcher = RERANK_VECTOR_FIELD_NAME_PATTERN.matcher(fieldName);
+                if (fieldNameMatcher.matches()) {
+                    final String textFieldName = fieldNameMatcher.group(1) + elasticIndex.getRerankTextFieldSuffix();
+                    final boolean textFieldExists = elasticIndex.getFields().stream()
+                            .anyMatch(f -> f.getFldName().equals(textFieldName));
+                    if (textFieldExists) {
+                        denseVectorToTextFieldMapping.put(fieldName, textFieldName);
+                    } else {
+                        throw new IllegalArgumentException("Text field `" + textFieldName + "` for rerank scoring " +
+                                                           "was not found");
+                    }
+                }
+            }
+        }
+
+        final ScoringModel scoringModel = openAIServiceProvider.get().getJinaScoringModel(rerankModel);
+        final int maxContextWindowTokens = rerankModel.getMaxContextWindowTokens();
+        final ReRankingContentAggregator rerankAggregator = ReRankingContentAggregator.builder()
+                .scoringModel(scoringModel)
+                .minScore(elasticIndex.getRerankScoreMinimum().doubleValue())
+                .build();
+
+        final Map<Query, Collection<List<Content>>> queryContentMap = new HashMap<>();
+        final Map<String, List<String>> fieldValueToDocIdMap = new HashMap<>();
+        for (final String denseVectorField : denseVectorToTextFieldMapping.keySet()) {
+            final String denseVectorTextField = denseVectorToTextFieldMapping.get(denseVectorField);
+            final String knnQueryTerm = queryParams.getKnnFieldQueries().get(denseVectorField);
+            final List<Content> fieldValues = new ArrayList<>();
+
+            if (knnQueryTerm != null) {
+                if (!queryContentMap.isEmpty()) {
+                    throw new UnsupportedOperationException("Rerank using multiple dense_vector fields is not " +
+                                                            "supported");
+                }
+                for (final Hit<ObjectNode> searchHit : searchHits) {
+                    final Map<String, JsonData> mapSearchHit = searchHit.fields();
+                    final JsonData rawFieldValue = mapSearchHit.get(denseVectorTextField);
+                    if (rawFieldValue != null && searchHit.id() != null) {
+                        try {
+                            String fieldValue = (String) rawFieldValue.to(ArrayList.class).getFirst();
+                            if (maxContextWindowTokens > 0) {
+                                // Model context window limit is specified, so truncate the field value to fit
+                                final int charLimit = Math.min(fieldValue.length(), maxContextWindowTokens);
+                                fieldValue = fieldValue.substring(0, charLimit);
+                            }
+                            fieldValueToDocIdMap.computeIfAbsent(fieldValue,
+                                    k -> new ArrayList<>()).add(searchHit.id());
+                            fieldValues.add(Content.from(TextSegment.from(fieldValue)));
+                        } catch (final Exception e) {
+                            throw new RuntimeException("Failed to parse value '" + rawFieldValue + "' for field " +
+                                                       denseVectorTextField, e);
+                        }
+                    }
+                }
+
+                queryContentMap.put(Query.from(knnQueryTerm), List.of(fieldValues));
+            }
+        }
+
+        final List<Content> rankedContent = rerankAggregator.aggregate(queryContentMap);
+        for (final Content content : rankedContent) {
+            final List<String> docIds = fieldValueToDocIdMap.get(content.textSegment().text());
+            if (docIds != null) {
+                for (final String docId : docIds) {
+                    rankedContentMap.put(docId, content);
+                }
+            }
+        }
+    }
+
     /**
      * Locate the value of the doc field by its full path
      */
@@ -351,7 +490,7 @@ public class ElasticSearchTaskHandler {
                     .map(this::jsonValueToNative)
                     .toList();
         } else {
-            return jsonValueToNative(docField.get(0));
+            return jsonValueToNative(docField.getFirst());
         }
     }
 
